# QuakkaCad

./: .dockerignore  .gitignore  Dockerfile  README.md
api/: agents.py  cadquery_compiler.py  fea_solver.py  main.py  mubit_client.py  openscad_compiler.py  prompt.md  pyproject.toml  schemas.py  storage.py
api/routers/: batch.py  conference.py  generate.py  meetings.py
api/templates/: agent.py  models.py  render.py
api/templates/assemblies/: __init__.py  belt_pulley.py  body_tube.py  bulkhead.py  bushing_assembly.py  cam_follower.py  differential_gear.py  finned_rocket_body.py  flanged_tube.py  four_bar_linkage.py  gear_train.py  helical_spring.py  hex_standoff.py  hole_utils.py  lead_screw.py  mounting_plate.py  planetary_gear.py  rack_and_pinion.py  shaft_coupling.py  stack_assembly.py  universal_joint.py  worm_gear.py
api/templates/atomic/: __init__.py  bevel_gear.scad  cam.scad  flange.scad  hex_standoff.scad  lead_screw_shaft.scad  linkage_bar.scad  pulley.scad  rack.scad  ring.scad  ring_gear.scad  shaft_coupling.scad  slotted_ring.scad  spring.scad  spur_gear.scad  trapezoidal_fin.scad  tube.scad  ujoint_yoke.scad  worm.scad
api/tests/: sample-transcript.txt  test_mubit_memories.py  test_plan_to_model.py  test_transcript_to_plan.py
backend/: main.py  prompt.md  requirements.txt  viewer.html
quakka-cad/: next.config.ts  package-lock.json  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  server.mjs
quakka-cad/app/: globals.css  layout.tsx  page.tsx
quakka-cad/public/: openscad-worker.js  pcm-worklet.js
quakka-cad/tests/: smoke.spec.ts
(+25 files in other folders)
