[project]
name = "api"
version = "0.1.0"
description = "QuakkaCad unified backend — OpenSCAD generation, meeting CAD planning, conference BFF, and WebRTC signaling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.27.0",
    "logfire[fastapi]>=3.0.0",
    "mubit-sdk>=0.6.0",
    "pydantic>=2.13.0",
    "pydantic-ai[openai]>=1.0.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv]
package = false
